--- a/examportalspring/Dockerfile
+++ b/examportalspring/Dockerfile
@@ -1,28 +1,19 @@
-FROM openjdk:21-jdk-slim
+# ---- build (Java 21) ----
+FROM maven:3.9.9-eclipse-temurin-21 AS build
+WORKDIR /app
+COPY pom.xml .
+RUN mvn -q -DskipTests dependency:go-offline
+COPY src ./src
+RUN mvn -q -DskipTests clean package
 
-# Set environment variable for non-interactive install
-ENV DEBIAN_FRONTEND=noninteractive
-ENV APP_USER=nonrootuser
-ENV APP_UID=1000
+# ---- run (Java 21) ----
+FROM eclipse-temurin:21-jre
+ENV APP_USER=nonrootuser APP_UID=1000 JAVA_OPTS=""
+RUN groupadd --gid ${APP_UID} ${APP_USER} \
+ && useradd --uid ${APP_UID} --gid ${APP_UID} --shell /bin/bash --create-home ${APP_USER}
+WORKDIR /app
+COPY --from=build /app/target/*.jar /app/app.jar
+EXPOSE 8080
+USER ${APP_USER}
+ENTRYPOINT ["sh","-c","java $JAVA_OPTS -jar /app/app.jar"]
 
-# 1. Install Python 3, GCC, and Build Utilities
-# 'build-essential' is crucial for robust C/C++ compilation
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-        python3 \
-        gcc \
-        build-essential \
-    # 2. Create the non-root user with the specific UID
-    && groupadd --gid $APP_UID $APP_USER && \
-    useradd --uid $APP_UID --gid $APP_UID --shell /bin/bash --create-home $APP_USER \
-    # 3. Clean up package lists to keep image size small
-    && rm -rf /var/lib/apt/lists/*
-
-# Set the working directory for code execution
-WORKDIR /code
-
-# Switch to the non-root user. This is the security sandbox layer.
-USER $APP_USER
-
-# Define the default command
-CMD ["sh"]
