--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,8 @@
 name: examportal
+
+# Explicitly tell Compose to read ./.env (also done automatically by default)
+env_file: .env
+
 services:
   db:
     image: mysql:8.0
@@ -8,10 +12,11 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE:-newexam}
     volumes:
       - dbdata:/var/lib/mysql
-      # first run only: seed schema/tables
+      # First run only: seed schema/tables
       - ./examportal.sql:/docker-entrypoint-initdb.d/01_init.sql:ro
-    ports:
-      - "3306:3306"
+    # Security: do NOT expose 3306 publicly
+    # ports:
+    #   - "3306:3306"
     healthcheck:
       test: ["CMD-SHELL","mysqladmin ping -h 127.0.0.1 -p${MYSQL_ROOT_PASSWORD} --silent"]
       interval: 10s
