Fix backend Dockerfile: prevent UID 1000 conflict

--- a/examportalspring/Dockerfile
+++ b/examportalspring/Dockerfile
@@ -8,12 +8,17 @@ RUN mvn -q -DskipTests clean package
 
 # ---- run (Java 21) ----
 FROM eclipse-temurin:21-jre
+
 ENV APP_USER=nonrootuser APP_UID=1000 JAVA_OPTS=""
-RUN groupadd --gid ${APP_UID} ${APP_USER} \
- && useradd --uid ${APP_UID} --gid ${APP_UID} --shell /bin/bash --create-home ${APP_USER}
+
+# ✅ create only if missing
+RUN if ! getent group ${APP_UID} >/dev/null; then groupadd -g ${APP_UID} ${APP_USER}; fi && \
+    if ! id -u ${APP_UID} >/dev/null 2>&1; then useradd -m -u ${APP_UID} -g ${APP_UID} ${APP_USER}; fi
+
 WORKDIR /app
 COPY --from=build /app/target/*.jar /app/app.jar
+
 EXPOSE 8080
 USER ${APP_USER}
-ENTRYPOINT ["sh","-c","java $JAVA_OPTS -jar /app/app.jar"]
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar /app/app.jar"]
 
