--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,19 @@
-name: examportal
+version: "3.9"
 
-# Explicitly tell Compose to read ./.env (also done automatically by default)
-env_file: .env
+name: examportal
 
 services:
   db:
     image: mysql:8.0
     container_name: examportal-db
+    env_file:
+      - .env
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE:-newexam}
     volumes:
       - dbdata:/var/lib/mysql
-      # First run only: seed schema/tables
       - ./examportal.sql:/docker-entrypoint-initdb.d/01_init.sql:ro
-    # Security: do NOT expose 3306 publicly
-    # ports:
-    #   - "3306:3306"
     healthcheck:
       test: ["CMD-SHELL","mysqladmin ping -h 127.0.0.1 -p${MYSQL_ROOT_PASSWORD} --silent"]
       interval: 10s
@@ -29,6 +26,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    env_file:
+      - .env
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/${MYSQL_DATABASE:-newexam}?useSSL=false&serverTimezone=UTC
       SPRING_DATASOURCE_USERNAME: root
@@ -43,6 +42,8 @@ services:
     container_name: examportal-frontend
     depends_on:
       - backend
+    env_file:
+      - .env
     ports:
       - "80:80"
     restart: unless-stopped
