Fix Angular dist path for nginx

--- a/online-exam-portal/Dockerfile
+++ b/online-exam-portal/Dockerfile
@@ -9,11 +9,9 @@ RUN npx ng build --configuration production || npm run build
 # ---- serve ----
 FROM nginx:stable
 
-# If your Angular output is in a subfolder, adjust this to the exact path:
-# COPY --from=build /app/dist/online-exam-portal/browser /usr/share/nginx/html
-COPY --from=build /app/dist /usr/share/nginx/html
+# ✅ Correct path based on Angular output
+COPY --from=build /app/dist/online-exam-portal /usr/share/nginx/html
 
-# Write nginx config via heredoc (no parsing issues, $vars stay intact)
 RUN cat >/etc/nginx/conf.d/default.conf <<'NGINX'
 server {
     listen 80;
