--- a/online-exam-portal/Dockerfile
+++ b/online-exam-portal/Dockerfile
@@ -1,38 +1,56 @@
-# ---- build ----
-FROM node:20 AS build
+# -------------------------------
+# Stage 1: Build Angular App
+# -------------------------------
+FROM node:20-alpine AS build
 WORKDIR /app
+
+# Copy package files and install dependencies
 COPY package*.json ./
 RUN npm ci || npm install
+
+# Copy source code and build the app
 COPY . .
-RUN npx ng build --configuration production || npm run build
+RUN npm run build --prod || npx ng build --configuration production
 
-# ---- serve ----
-FROM nginx:stable
+# -------------------------------
+# Stage 2: Serve with Nginx
+# -------------------------------
+FROM nginx:alpine
 
-# ✅ Correct path based on Angular output
-COPY --from=build /app/dist/online-exam-portal /usr/share/nginx/html
+# ✅ Copy built Angular files to Nginx html directory
+# (Your Angular build outputs to dist/examportal/browser)
+COPY --from=build /app/dist/examportal/browser /usr/share/nginx/html/browser
 
-RUN cat >/etc/nginx/conf.d/default.conf <<'NGINX'
+# ✅ Custom Nginx configuration
+RUN cat > /etc/nginx/conf.d/default.conf <<'NGINXCONF'
 server {
     listen 80;
-    server_name _;
-    root /usr/share/nginx/html;
+    server_name localhost;
+
+    # Serve Angular files
+    root /usr/share/nginx/html/browser;
     index index.html;
 
     location / {
         try_files $uri $uri/ /index.html;
     }
 
+    # Proxy all /api requests to backend service
     location /api/ {
-        proxy_pass http://backend:8080/;
+        proxy_pass http://examportal-backend:8080;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
 }
-NGINX
+NGINXCONF
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
